<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/loginScreen"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="false">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:gravity="center"
      android:orientation="vertical"
      android:paddingLeft="32dp"
      android:paddingRight="32dp">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_beetrack_logo"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/user"
        android:textColorHint="@color/white"
        app:errorTextAppearance="@style/LoginTheme.EditTextError"
        app:hintTextAppearance="@style/LoginTheme.FloatingLabel">

      <EditText
          android:id="@+id/userNameEditText"
          style="@style/LoginTheme.EditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/edit_text_bottom_line"
          android:drawableLeft="@drawable/ic_person"
          android:drawablePadding="8dp"
          android:drawableStart="@drawable/ic_person"
          android:imeActionLabel="@string/next"
          android:imeOptions="actionNext"
          android:inputType="textEmailAddress|textNoSuggestions"
          android:maxLines="1"
          android:textColor="@color/black"
          />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:errorTextAppearance="@style/LoginTheme.EditTextError"
        app:hintTextAppearance="@style/LoginTheme.FloatingLabel"
        app:passwordToggleEnabled="false">

      <EditText
          android:id="@+id/passwordEditText"
          style="@style/LoginTheme.EditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/edit_text_bottom_line"
          android:drawableLeft="@drawable/ic_lock"
          android:drawablePadding="8dp"
          android:drawableStart="@drawable/ic_lock"
          android:focusableInTouchMode="true"
          android:imeActionLabel="@string/action_login_short"
          android:imeOptions="actionGo"
          android:inputType="numberPassword"
          android:maxLength="4"
          android:maxLines="1"
          android:textColor="@color/black"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

      <View
          android:id="@+id/leftCircle"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_alignParentLeft="true"
          android:background="@drawable/semicircle_left"
          tools:ignore="RtlHardcoded"/>

      <View
          android:id="@+id/centerArea"
          android:layout_width="0dp"
          android:layout_height="50dp"
          android:layout_alignParentTop="true"
          android:layout_toLeftOf="@+id/rightCircle"
          android:layout_toRightOf="@+id/leftCircle"
          android:background="@color/white"
          android:visibility="gone"
          tools:ignore="RtlHardcoded"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_centerVertical="true"
          android:text="@string/log_in"
          android:textColor="@color/colorAccent"
          android:textSize="16sp"
          android:textStyle="bold"
          android:visibility="gone"/>

      <View
          android:id="@+id/rightCircle"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_alignParentRight="true"
          android:background="@drawable/semicircle_right"
          tools:ignore="RtlHardcoded"/>

      <ProgressBar
          android:id="@+id/loadingLogin"
          android:layout_width="35dp"
          android:layout_height="35dp"
          android:layout_centerInParent="true"
          android:indeterminate="true"/>

    </RelativeLayout>

    <Button
        android:id="@+id/login_button"
        style="@style/BeetrackButtonRounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/rounded_button_bg"
        android:text="@string/log_in"/>

  </LinearLayout>

</ScrollView>
